--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div> 
         <img src="img/img.png" alt="" class="freature-img">
         <div class="social-links">
-            <a href="#">FACEBOOK</a>
-            <a href="#">INSTRAGRAM </a>
-            <a href="#">TWITTER</a>
+            <a href="https://www.facebook.com/">FACEBOOK</a>
+            <a href="https://www.instragram.com/">INSTRAGRAM </a>
+            <a href="https://www.twitter.com/">TWITTER</a>
         </div>
     </div>
 </body>
